# obstacle_avoidance

./: Box.h  CMakeLists.txt  CollisionDetection.cpp  CollisionDetection.h  ProcessPointClouds.cpp  ProcessPointClouds.h  README.md  main.cpp
obstacle_avoidance/: CMakeLists.txt  CollisionDetection.cpp  CollisionDetection.h  ProcessPointClouds.h  README.md  main.cpp
pcl_tutorials/: pcl_test
pcl_tutorials/pointcloud_files/: 000000_filtered.pcd
